[package]
name = "generate-readme"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.188", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.106", default-features = false, features = ["alloc"] }

[[bin]]
name = "generate-readme"
path = "generate_readme.rs"
